[package]
name = "graph-log"
version = "0.1.0"
authors = ["Alexander Ivanov <aivanov@atpco.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbox = "0.11"
termion = "1.5"

[dependencies.tui]
version = "0.14"
default-features = false
features = ["termion"]
